# cloudflare-ai-gateway-analyzer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  cli.py  config-example.yaml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  serve.py
docs/: api-contract.md  architecture.md  config.md  data-model.md  development.md  operations.md  security-and-privacy.md
legacy/v0.2/: pyproject.toml  requirements-dashboard.txt
legacy/v0.2/src/cf_aigw_analyzer/: cli.py  cloudflare.py  dashboard.py  database.py
legacy/v0.2/tests/: test_dashboard.py  test_database.py  test_output.py  test_paths.py  test_usage.py
scripts/: check_api.py  generate_openapi.py  seed_sqlite.py  smoke_local.py
src/cf_aigw_analyzer/: __init__.py  __main__.py  analytics.py  cli.py  dashboard_app.py  database.py  filters.py  output.py  paths.py  sync.py  usage.py
src/cf_aigw_analyzer/analytics/: __init__.py  aggregate.py  context.py  events.py  insights.py  models.py  queries.py  summary.py  timeseries.py
src/cf_aigw_analyzer/cli/: __init__.py  _common.py  app.py  config_cmd.py  discover_cmd.py  init_cmd.py  query_cmd.py  serve_cmd.py  status_cmd.py  sync_cmd.py  usage_cmd.py  vacuum_cmd.py  version_cmd.py
src/cf_aigw_analyzer/config/: __init__.py  loader.py  settings.py  template.py  validators.py
src/cf_aigw_analyzer/control/: AGENTS.md  __init__.py  app.py  auth.py  deps.py  lifecycle.py  middleware.py  static.py  tasks.py
src/cf_aigw_analyzer/control/routes/: __init__.py  analytics_route.py  config_route.py  events_route.py  health_route.py  scopes_route.py  status_route.py  sync_route.py
src/cf_aigw_analyzer/control/schemas/: __init__.py  analytics.py  common.py  events.py  sync.py
src/cf_aigw_analyzer/core/: AGENTS.md  __init__.py  cloudflare.py  http_client.py  metrics.py  sanitizer.py  sync_engine.py  usage_parser.py
src/cf_aigw_analyzer/data/: AGENTS.md  __init__.py  db.py  migrations.py  models.py  schema.py
src/cf_aigw_analyzer/data/repository/: __init__.py  events.py  gateways.py  logs.py  metrics.py  raw.py  sync_locks.py  sync_runs.py  sync_state.py  usage.py
src/cf_aigw_analyzer/models/: __init__.py  enums.py
src/cf_aigw_analyzer/utils/: __init__.py  console.py  paths.py  time.py
tests/: conftest.py  test_analytics.py  test_database.py
tests/integration/: test_cli.py  test_control.py  test_sync_engine.py
tests/unit/: test_analytics.py  test_config_loader.py  test_http_client.py  test_metrics.py  test_repository.py  test_sanitizer.py  test_usage_parser.py
web/: AGENTS.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
web/src/api/: client.ts  types.ts
web/src/components/: Chart.tsx  InsightsList.tsx  KpiCard.tsx  Layout.tsx  ScopeSelector.tsx  ThemeToggle.tsx
web/src/hooks/: queries.ts
web/src/pages/: EventsPage.tsx  LatencyPage.tsx  ModelsPage.tsx  OverviewPage.tsx  SettingsPage.tsx  SyncConsolePage.tsx
web/src/store/: filters.ts  ui.ts
web/src/utils/: format.ts
