[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cloudflare-ai-gateway-analyzer"
version = "0.3.0a0"
description = "Cloudflare AI Gateway log collector and analyzer with FastAPI control plane and React panel"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "BlueSkyXN" }]
keywords = ["cloudflare", "ai-gateway", "analytics", "sqlite", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Log Analysis",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "certifi>=2024.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[project.scripts]
cf-aigw-analyzer = "cf_aigw_analyzer.cli:app"
cloudflare-ai-gateway-analyzer = "cf_aigw_analyzer.cli:app"

[project.urls]
Repository = "https://github.com/BlueSkyXN/cloudflare-ai-gateway-analyzer"
Issues = "https://github.com/BlueSkyXN/cloudflare-ai-gateway-analyzer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cf_aigw_analyzer"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/cli.py",
    "/main.py",
    "/serve.py",
    "/config-example.yaml",
    "/README.md",
    "/docs",
    "/tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line too long (ruff format handles it)
    "B008",   # function call in default argument (FastAPI/Typer pattern)
    "RUF001", # ambiguous unicode in strings (we use 中文 fullwidth punctuation)
    "RUF002", # ambiguous unicode in docstrings (same reason)
    "RUF003", # ambiguous unicode in comments (same reason)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: integration tests that may spin up a server or use a real SQLite file",
    "live: tests that hit real Cloudflare APIs and are skipped by default",
]

[tool.coverage.run]
source = ["src/cf_aigw_analyzer"]
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
